Fix scrollbar issue

--- a/static/scss/pages/_base.scss
+++ b/static/scss/pages/_base.scss
@@ -8,15 +8,20 @@
 body {
   font-family: Helvetica neue, "Open Sans", sans-serif, Arial, serif;
   font-size: 16px;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  overflow: auto;
 }
 .main {
+  flex: 1 1 auto;
   position: relative;
   width: 100%; height: 100%;
   left: 0; top: 0;
   text-align: center;
   min-height: 100vh;
   overflow-x: hidden;
-  overflow-y: scroll;
+  overflow-y: auto;
   // -webkit-overflow-scrolling: touch;
 }
 a {
