--- a/static/scss/pages/_footer.scss
+++ b/static/scss/pages/_footer.scss
@@ -2,6 +2,7 @@
  * Footer
 */
 .footer {
+  display:none;
   position: relative;
   width: 100%;
   left: 0; bottom: 0;
