--- a/static/scss/pages/_header.scss
+++ b/static/scss/pages/_header.scss
@@ -4,7 +4,7 @@
 .site-logo__wrap {
   position: relative;
   width: 100%;
-  padding: 7vmin 0;
+  padding: 2vmin 0;
   background-color: $theme-color-white;
   @media screen and (max-width: 800px) {
     border-bottom: $theme-color-gray-light 1px solid;
